packages/typ/tests/fixtures/diagnostics/0244_fun_recursive_self_application_01.ml.infer.expected
File "0244_fun_recursive_self_application_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0244_fun_recursive_self_application_01 is not a valid module name.

File "0244_fun_recursive_self_application_01.ml", line 1, characters 24-25:
1 | let rec bad_alpha x = x x
                            ^
Error: The value x has type 'a -> 'b but an expression was expected of type
         'a
       The type variable 'a occurs inside 'a -> 'b
